--- a/styles/index.css
+++ b/styles/index.css
@@ -8,12 +8,13 @@ h1,h2{
     text-align: center;
 }
 header{
-    height: 600px;
+    width: 800px;
     padding: 0;
+    margin: 0;
 }
 
 main{
-    height: 600px;  
+    width: 800px;  
 }
 
 .about{
