--- a/styles/index.css
+++ b/styles/index.css
@@ -1,20 +1,29 @@
 /* Globals */
 body{
     font-family: Arial, Helvetica, sans-serif;
-   
+    width: 100%;
+    max-width: 960px;
+    margin: auto ;
 }
 h1,h2{
     font-size: 36px;
     text-align: center;
 }
 header{
-    width: 800px;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
+header figure{
+width: 100%;
+padding: 0;
+margin: 0;
+}
 
 main{
-    width: 800px;  
+    width: 100%;
+    max-width: 960px;
+    margin: auto ;
 }
 
 .about{
@@ -29,6 +38,8 @@ main{
 }
 .skills h2{
     color: #26CC4B;
+    text-align: center;
+
         }
 
 .portfolio{
@@ -50,6 +61,11 @@ background-color: #1687A0
 }
 .contacts h2{
     color: #FF1B1B;
+    }
+.contacts input{
+    padding: 10px;
+    margin: 5px;
+
 }
 
 
